--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "pyyaml>=6.0",
     "click>=8.1.0",
     "tqdm>=4.65.0",
+    "streamlit>=1.28.0",
+    "plotly>=5.17.0",
 ]
 
 [project.optional-dependencies]
@@ -46,6 +48,7 @@ dev = [
 
 [project.scripts]
 analyze-photometry = "fiber_photometry.cli:main"
+flair = "FLAIR:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
